--- a/app/index.html
+++ b/app/index.html
@@ -38,6 +38,9 @@
     <script src="scripts/controllers.js"></script>
     <script src="scripts/services.js"></script>
     <script src="scripts/configuration.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.4/moment.min.js"></script>
+    <!-- angular moment -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular-moment/0.8.2/angular-moment.min.js"></script>
     <!-- endbuild -->
   </head>
   <body ng-app="whatsapp">
