Chat creation (implies uuid module in bower dependencies)

--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,7 @@
     <script src="bower_components/ionic/release/js/ionic.js"></script>
     <script src="bower_components/ionic/release/js/ionic-angular.js"></script>
     <script src="bower_components/ngCordova/dist/ng-cordova.js"></script>
+    <script src="bower_components/Angular.uuid2/dist/angular-uuid2.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
