Add time management (filter and relative)

--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,8 @@
     <script src="bower_components/ionic/release/js/ionic-angular.js"></script>
     <script src="bower_components/ngCordova/dist/ng-cordova.js"></script>
     <script src="bower_components/Angular.uuid2/dist/angular-uuid2.min.js"></script>
+    <script src="bower_components/moment/moment.js"></script>
+    <script src="bower_components/angular-moment/angular-moment.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -48,6 +50,7 @@
 
     <!-- configuration -->
     <script src="scripts/configuration.js"></script>
+
   </head>
   <body ng-app="whatsapp">
     <!--
