--- a/app/index.html
+++ b/app/index.html
@@ -42,11 +42,13 @@
     <script src="scripts/contacts.ctrl.js"></script>
     <script src="scripts/chats.ctrl.js"></script>
     <script src="scripts/account.ctrl.js"></script>
+    <script src="scripts/login.ctrl.js"></script>
 
     <!-- services -->
     <script src="scripts/contacts.srv.js"></script>
     <script src="scripts/chats.srv.js"></script>
     <script src="scripts/messages.srv.js"></script>
+    <script src="scripts/login.srv.js"></script>
 
     <!-- configuration -->
     <script src="scripts/configuration.js"></script>
