Account creation with auto login

--- a/app/index.html
+++ b/app/index.html
@@ -43,6 +43,7 @@
     <script src="scripts/chats.ctrl.js"></script>
     <script src="scripts/account.ctrl.js"></script>
     <script src="scripts/login.ctrl.js"></script>
+    <script src="scripts/signup.ctrl.js"></script>
 
     <!-- services -->
     <script src="scripts/contacts.srv.js"></script>
